--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.22.0
-pandas==1.3.5
-numpy==1.21.5
-matplotlib==3.5.1
-plotly==5.14.1
+pandas>=1.3.0
+numpy>=1.20.0
+matplotlib>=3.5.0
+plotly>=5.0.0
