--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-streamlit==1.22.0
+fastapi==0.115.12
+uvicorn==0.34.1
 pandas>=1.3.0
 numpy>=1.20.0
 matplotlib>=3.5.0
 plotly>=5.0.0
+streamlit==1.22.0
+dash==2.14.2
+dash-core-components>=1.0.0
+dash-html-components>=1.0.0
+dash-table>=4.0.0
+python-multipart==0.0.20
+pydantic>=2.0.0
