--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.115.12
-uvicorn==0.34.1
+fastapi==0.115.0
+uvicorn==0.34.0
 pandas>=1.3.0
 numpy>=1.20.0
 matplotlib>=3.5.0
@@ -9,5 +9,6 @@ dash==2.14.2
 dash-core-components>=1.0.0
 dash-html-components>=1.0.0
 dash-table>=4.0.0
-python-multipart==0.0.20
+python-multipart==0.0.6
 pydantic>=2.0.0
+aiofiles==23.2.1
