--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-fastapi==0.115.0
-uvicorn==0.34.0
-pandas>=1.3.0
-numpy>=1.20.0
-matplotlib>=3.5.0
-plotly>=5.0.0
+fastapi==0.103.1
+uvicorn==0.22.0
+pandas==1.5.3
+numpy==1.24.3
+matplotlib==3.7.1
+plotly==5.14.1
 streamlit==1.22.0
-dash==2.14.2
-dash-core-components>=1.0.0
-dash-html-components>=1.0.0
-dash-table>=4.0.0
+dash==2.9.3
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 python-multipart==0.0.6
-pydantic>=2.0.0
-aiofiles==23.2.1
+pydantic==1.10.8
+aiofiles==23.1.0
+requests==2.28.2
