--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 fastapi==0.103.1
-uvicorn==0.22.0
-pandas==1.5.3
-numpy==1.24.3
-matplotlib==3.7.1
-plotly==5.14.1
-streamlit==1.22.0
-dash==2.9.3
+uvicorn==0.34.1
+pandas==2.0.3
+numpy==1.25.2
+matplotlib==3.7.2
+plotly==5.15.0
+dash==2.11.1
 dash-core-components==2.0.0
 dash-html-components==2.0.0
+dash-bootstrap-components==1.4.1
 dash-table==5.0.0
+streamlit==1.24.0
+starlette==0.27.0
 python-multipart==0.0.6
-pydantic==1.10.8
+Jinja2==3.1.2
 aiofiles==23.1.0
-requests==2.28.2
+pydantic==2.0.3
+typing_extensions==4.7.1
+requests==2.31.0
+gunicorn==21.2.0
